@@ -13,20 +13,16 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.stream.IntStream;
 
-public class VirtualThreads {
+public class PlainThreads {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(VirtualThreads.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(PlainThreads.class);
 
-    public double start(int maxThreads) {
+    public static double start(int maxThreads) {
         Instant start = Instant.now();
         LOGGER.info("Available processors: {}", Runtime.getRuntime().availableProcessors());
 
-        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
-            // create 10 virtual threads
+        try (ExecutorService executorService = Executors.newFixedThreadPool(52)) {
             new CommonTestCase().testcase(maxThreads, executorService);
-            LOGGER.info("submitted");
-        } finally {
-            LOGGER.info("executor closed");
         }
         Instant end = Instant.now();
         double timeTaken = Duration.between(start, end).toMillis() / 1000.0;
@@ -36,10 +32,9 @@ public class VirtualThreads {
 
     public static void main(String[] arg) {
         Double sum = 0.0;
-        int readings = 1;
+        int readings = 15;
         for (int i = 0; i < readings; i++) {
-            VirtualThreads virtualThreads = new VirtualThreads();
-            sum += virtualThreads.start(100);
+            sum += start(100);
         }
         LOGGER.info("Time Avg : {} sec", sum / readings);
     }
